--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the store controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.entry {
+  float: left;
+  padding: 10px;
+  margin-right: 30px;
+  border: 1px dashed #000000;
+
+  img {
+    height: 300px;
+  }
+
+  h3 {
+    font-size: 40px;
+  }
+}
