--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,9 @@
 	<div id="columns">
 		<div id="side">
 			<ul>
-				<li><a href="http://www....">Home</a></li>
-				<li><a href="http://www..../faq">Questions</a></li>
-				<li><a href="http://www..../news">News</a></li>
-				<li><a href="http://www..../contact">Contact</a></li>
+				<li><a href="/">Home</a></li>
+				<li><a href="/products">Products</a></li>
+				<li><a href="/carts">Carts</a></li>
 			</ul>
 		</div>
 		<div id="main">
