--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -13,6 +13,7 @@
 				<div class="price_line">
 					<span class="price">Price: <%= format_currency_as_chf(product.price) %></span>
 				</div>
+				<%= button_to 'Add to Cart', line_items_path(product_id: product) %>
 			</div>
 		<% end %>
 	<% end %>
