--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -37,11 +37,13 @@
     padding-left: 1em;
   }
 
-  .list_line_even {
-    background:   #e0f8f8;
+  .list_line_even,
+  .list_line_even div {
+    background-color:   #EEEEEE;
   }
 
-  .list_line_odd {
-    background:   #f8b0f8;
+  .list_line_odd,
+  .list_line_odd div {
+    background-color:   #ffffff;
   }
 }
