--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,31 +1,34 @@
 <% if notice %>
-	<p id="notice"><%= notice %></p>
+	<div class="alert alert-success">
+		<p id="notice"><%= notice %></p>
+	</div>
 <% end %>
-<h2>Your Pragmatic Cart</h2>
-<table>
-	<tr>
-		<td>Product</td>
-		<td>Single price</td>
-		<td>&times;</td>
-		<td>Total</td>
-		<td></td>
-	</tr>
-	<% @cart.line_items.each do |item| %>
+<div class="page-header">
+	<h1>Your Pragmatic Cart</h1>
+</div>
+<div class="table-responsive">
+	<table class="table table-striped">
 		<tr>
-			<td><%= item.product.title %></td>
-			<td><%= format_currency_as_chf(item.product.price) %></td>
-			<td><%= item.quantity %></td>
-			<td><%= format_currency_as_chf(item.total()) %></td>
-			<td><%= link_to 'Delete', item, :confirm => "Are you sure?", :method => :delete %></td>
+			<th>Product</th>
+			<th>Single price</th>
+			<th>&times;</th>
+			<th>Total</th>
+			<th></th>
 		</tr>
-	<% end %>
-	<tr class="totalprice">
-		<td>Total</td>
-		<td></td>
-		<td></td>
-		<td><%= format_currency_as_chf(@sum) %></td>
-	</tr>
-</table>
+		<% @cart.line_items.each do |item| %>
+			<tr>
+				<td><%= item.product.title %></td>
+				<td><%= format_currency_as_chf(item.product.price) %></td>
+				<td><%= item.quantity %></td>
+				<td><%= format_currency_as_chf(item.total()) %></td>
+				<td><%= link_to 'Delete', item, :confirm => "Are you sure?", :method => :delete, class: "btn btn-danger" %></td>
+			</tr>
+		<% end %>
+		<tr class="totalprice">
+			<td colspan="3">Total</td>
+			<td colspan="2"><%= format_currency_as_chf(@sum) %></td>
+		</tr>
+	</table>
+</div>
 
-<%= link_to 'Edit', edit_cart_path(@cart) %> |
 <%= link_to 'Back', carts_path %>
