--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,23 +6,31 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body class='<%= controller.controller_name %>'>
-	<div id="banner">
-		<%= image_tag("logo.png") %>
-		<%= @page_title || "Pragmatic Bookshelf" %>
+<body class="<%= controller.controller_name %>" role="document">
+
+	<div class="navbar navbar-inverse" role="navigation">
+		<div class="container">
+			<div class="navbar-header">
+				<button data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle" type="button">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a href="/" class="navbar-brand curvy">Shop</a>
+			</div>
+			<div class="collapse navbar-collapse">
+				<ul class="nav navbar-nav">
+					<li class="<%= is_active?("/") %>"><a href="/">Home</a></li>
+					<li class="<%= is_active?("/products") %>"><a href="/products">Products</a></li>
+					<li class="<%= is_active?("/carts") %>"><a href="/carts">Carts</a></li>
+				</ul>
+			</div><!-- /.nav-collapse -->
+		</div><!-- /.container -->
 	</div>
 
-	<div id="columns">
-		<div id="side">
-			<ul>
-				<li><a href="/">Home</a></li>
-				<li><a href="/products">Products</a></li>
-				<li><a href="/carts">Carts</a></li>
-			</ul>
-		</div>
-		<div id="main">
-			<%= yield %>
-		</div>
+	<div class="container theme-showcase" role="main">
+		<%= yield %>
 	</div>
 </body>
 </html>
