--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -27,7 +27,7 @@
     <%= f.label :price %><br>
     <%= f.text_field :price %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="actions ">
+    <%= f.submit :class => 'btn btn-success' %>
   </div>
 <% end %>
