--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,26 +1,32 @@
-<h1>Listing products</h1>
+<div class="page-header">
+	<h1>Listing products</h1>
+</div>
 
-<table>
-    <% @products.each do |product| %>
-      <tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
-		<td><img style="max-width:100px;" src="<%= product.image_url %>"></td>
-        <td class="list_description">
-			<dl>
-				<dt><%= product. title %></dt>
-				<dd><%= truncate(strip_tags(product.description),
-								 length: 80) %></dd>
-			</dl>
-		</td>
-        <td><%= product.price %></td>
-        <td class="list_actions">
-			<%= link_to 'Show', product %><br>
-			<%= link_to 'Edit', edit_product_path(product) %><br>
-			<%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
-		</td>
-      </tr>
-    <% end %>
-</table>
-
+	<div class="table-responsive">
+	<table class="table table-striped"
+	<% @products.each do |product| %>
+		<tr class="<%= cycle('list_line_odd', 'list_line_even') %>">
+			<td class="col-xs-6 col-sm-2">
+				<img style="max-width:100px;" src="<%= product.image_url %>">
+			</td>
+			<td class="col-xs-6 col-sm-4 list_description">
+				<dl>
+					<dt><%= product. title %></dt>
+					<dd><%= truncate(strip_tags(product.description),
+									 length: 80) %></dd>
+				</dl>
+			</td>
+			<td class="col-xs-6 col-sm-1"><%= format_currency_as_chf(product.price) %></td>
+			<td class="col-xs-6 col-sm-2 list_actions">
+				<%= button_to 'Show', product, class: "btn btn-xs btn-success", :method => :get  %><br>
+				<%= link_to 'Edit', edit_product_path(product), class: "btn btn-xs btn-warning" %><br>
+				<br>
+				<%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-xs btn-danger" %>
+			</td>
+		</tr>
+	<% end %>
+	</table>
+	</div>
 <br>
 
 <%= link_to 'New Product', new_product_path %>
