--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,8 @@
-<p id="notice"><%= notice %></p>
+<% if notice %>
+	<div class="alert alert-success">
+		<p id="notice"><%= notice %></p>
+	</div>
+<% end %>
 
 <p>
   <strong> title:</strong>
