--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -12,9 +12,9 @@
   <tbody>
     <% @carts.each do |cart| %>
       <tr>
-        <td><%= link_to 'Show', cart %></td>
-        <td><%= link_to 'Edit', edit_cart_path(cart) %></td>
-        <td><%= link_to 'Destroy', cart, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><strong><%= format_currency_as_chf(cart.total_price()) %></strong>&nbsp;</td>
+        <td><%= link_to 'Show', cart, class: "btn btn-default" %>&nbsp;</td>
+        <td><%= link_to 'Delete', cart, :confirm => "Are you sure?", :method => :delete, class: "btn btn-danger" %></td>
       </tr>
     <% end %>
   </tbody>
