--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -26,7 +26,9 @@
 		<% end %>
 		<tr class="totalprice">
 			<td colspan="3">Total</td>
-			<td colspan="2"><%= format_currency_as_chf(@sum) %></td>
+			<td colspan="2">
+				<%= format_currency_as_chf(@cart.total_price()) %>
+			</td>
 		</tr>
 	</table>
 </div>
