--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -18,7 +18,7 @@
 			</td>
 			<td class="col-xs-6 col-sm-1"><%= format_currency_as_chf(product.price) %></td>
 			<td class="col-xs-6 col-sm-2 list_actions">
-				<%= button_to 'Show', product, class: "btn btn-xs btn-success", :method => :get  %><br>
+				<%= button_to 'Show', product, class: "btn btn-xs btn-default", :method => :get  %><br>
 				<%= link_to 'Edit', edit_product_path(product), class: "btn btn-xs btn-warning" %><br>
 				<br>
 				<%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-xs btn-danger" %>
