--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -3,34 +3,5 @@
 		<p id="notice"><%= notice %></p>
 	</div>
 <% end %>
-<div class="page-header">
-	<h1>Your Pragmatic Cart</h1>
-</div>
-<div class="table-responsive">
-	<table class="table table-striped">
-		<tr>
-			<th>Product</th>
-			<th>Single price</th>
-			<th>&times;</th>
-			<th>Total</th>
-			<th></th>
-		</tr>
-		<% @cart.line_items.each do |item| %>
-			<tr>
-				<td><%= item.product.title %></td>
-				<td><%= format_currency_as_chf(item.product.price) %></td>
-				<td><%= item.quantity %></td>
-				<td><%= format_currency_as_chf(item.total()) %></td>
-				<td><%= link_to 'Delete', item, :confirm => "Are you sure?", :method => :delete, class: "btn btn-danger" %></td>
-			</tr>
-		<% end %>
-		<tr class="totalprice">
-			<td colspan="3">Total</td>
-			<td colspan="2">
-				<%= format_currency_as_chf(@cart.total_price()) %>
-			</td>
-		</tr>
-	</table>
-</div>
 
-<%= link_to 'Back', carts_path %>
+<%= render @cart %>
