--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,30 +7,39 @@
   <%= csrf_meta_tags %>
 </head>
 <body class="<%= controller.controller_name %>" role="document">
+	<div id="wrapper">
+		<div id="sidebar-wrapper">
+			<ul class="sidebar-nav">
+				<li class="sidebar-brand"><a href="#">Shop</a></li>
 
-	<div class="navbar navbar-inverse" role="navigation">
-		<div class="container">
-			<div class="navbar-header">
-				<button data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle" type="button">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a href="/" class="navbar-brand curvy">Shop</a>
-			</div>
-			<div class="collapse navbar-collapse">
-				<ul class="nav navbar-nav">
-					<li class="<%= is_active?("/") %>"><a href="/">Home</a></li>
-					<li class="<%= is_active?("/products") %>"><a href="/products">Products</a></li>
-					<li class="<%= is_active?("/carts") %>"><a href="/carts">Carts</a></li>
-				</ul>
-			</div><!-- /.nav-collapse -->
-		</div><!-- /.container -->
+				<li class="<%= is_active?("/") %>"><a href="/">Home</a></li>
+				<li class="<%= is_active?("/products") %>"><a href="/products">Products</a></li>
+				<li class="<%= is_active?("/carts") %>"><a href="/carts">Carts</a></li>
+			</ul>
+			<% if @cart %>
+				<div id="cart">
+					<% @minimize = true %>
+					<%= render @cart %>
+				</div>
+			<% end %>
+		</div>
+
+		<div class="container theme-showcase" role="main">
+			<a id="menu-toggle" class="btn btn-default" href="#">
+				<i class="icon-reorder">
+					<img src="/assets/menu.png" alt="Menu toggle"/>
+				</i>
+			</a>
+			<%= yield %>
+		</div>
 	</div>
 
-	<div class="container theme-showcase" role="main">
-		<%= yield %>
-	</div>
+	<!-- Custom JavaScript for the Menu Toggle -->
+	<script>
+		$("#menu-toggle").click(function(e) {
+			e.preventDefault();
+			$("#wrapper").toggleClass("active");
+		});
+	</script>
 </body>
 </html>
