--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -20,7 +20,7 @@
 							<%= image_tag(product.image_url) %>
 							<div class="price_line">
 								<strong><%= format_currency_as_chf(product.price) %></strong>
-								<%= button_to "Add To Cart".html_safe,line_items_path(product_id: product), class: "btn btn-success" %>
+								<%= button_to "Add To Cart".html_safe,line_items_path(product_id: product), class: "btn btn-success", remote: true %>
 							</div>
 						</div>
 					</div>
