--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,7 +29,7 @@
       border: none;
       margin-bottom: 0;
 
-      h1 {
+      h1 a {
         color: #fff;
         font-size: 13px;
         padding-left: 22px;
