--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -10,7 +10,7 @@
 	<% cache ['store', Product.latest] do %>
 		<% @products.each do |product| %>
 			<% cache ['entry', product] do %>
-				<div class="col-sm-4">
+				<div class="col-sm-4 entry">
 					<div class="panel panel-default">
 						<div class="panel-heading">
 							<h4><%= product.title %></h4>
