--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -34,9 +34,12 @@
 		</table>
 	</div>
 
+	<div class="cart_buttons">
 		<%= button_to 'Empty cart', @cart, method: :delete, class: "btn btn-danger btn-xs", data: { confirm: 'Are you sure?' } %>
-	<% if !@minimize %>
-		<br>
-		<%= link_to 'Back', carts_path %>
-	<% end %>
+		<%= button_to "Checkout", new_order_path, method: :get, class: "btn btn-success btn-xs" %>
+		<% if !@minimize %>
+			<br>
+			<%= link_to 'Back', carts_path %>
+		<% end %>
+	</div>
 <% end %>
