--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,5 +1,5 @@
 <% if notice %>
-	<div class="alert alert-success">
+	<div id="notice" class="alert alert-success">
 		<p id="notice"><%= notice %></p>
 	</div>
 <% end %>
