--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,5 +1,7 @@
 <% if notice %>
-	<p id="notice"><%= notice %></p>
+	<div id="notice" class="alert alert-success">
+		<p id="notice"><%= notice %></p>
+	</div>
 <% end %>
 
 <div class="page-header">
