--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -11,15 +11,15 @@
 
   <tbody>
     <% @carts.each do |cart| %>
-      <tr>
-        <td><strong><%= format_currency_as_chf(cart.total_price()) %></strong>&nbsp;</td>
-        <td><%= link_to 'Show', cart, class: "btn btn-default" %>&nbsp;</td>
-        <td><%= link_to 'Delete', cart, :confirm => "Are you sure?", :method => :delete, class: "btn btn-danger" %></td>
-      </tr>
-    <% end %>
+	  <tr>
+		<td><strong><%= format_currency_as_chf(cart.total_price()) %></strong>&nbsp;</td>
+		<td><%= link_to 'Show', cart, class: "btn btn-default" %>&nbsp;</td>
+		<td><%= link_to 'Delete', cart, :confirm => "Are you sure?", :method => :delete, class: "btn btn-danger" %></td>
+	  </tr>
+	<% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Cart', new_cart_path %>
+<%# link_to 'New Cart', new_cart_path %>
