Fixing design bug

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,8 +16,12 @@
   width: 22px;
 }
 
+#wrapper .container {
+  width: auto;
+}
 #sidebar-wrapper {
   border-right: 1px solid #000;
+
 
   #cart {
     td {
